# advancedMath

./: notes.1.txt
elipticCurves/: CMakeLists.txt  main.cpp
notes/: notes.2.txt
quaternions/: a.out  main-old.cpp  main.cpp  makefile  quaternion
